cv listo bah no listo pero listo

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,12 +1,11 @@
 <div class="contact">
   <h2>Contact</h2>
   <ul>
-    <li>University of Jekyll</li>
-    <li>Department of Themes</li>
-    <li>123 Main St, Anytown, USA</li>
-    <li><span class="li-icon">{% include svg/pin-alt.svg %}</span><span>Foobar Hall 1.23</span></li>
-    <li><span class="li-icon">{% include svg/phone.svg %}</span><span>+1 234 567 890</span></li>
-    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:username@domain.com">username@domain.com</a></li>
-    <li><span class="li-icon">{% include svg/internet.svg %}</span><a href="https://cvless.netlify.app">https://cvless.netlify.app</a></li>
+    <li>Si llegaste hasta aca seguramente ya sepas donde encontrarme</li>
+    <li>Si aun no lo sabes, proba seguir buscando en la pagina previa</li>
+    <li>Igual te dejo mi mail por las dudas</li>
+
+    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:frosimanuel@gmail.com">username@domain.com</a></li>
+    <li><span class="li-icon">{% include svg/internet.svg %}</span><a href="https://frosimanuel.github.io/">Y si no le alcanza, vuelva a casa estimado viajero.</a></li>
   </ul>
 </div>
