cv en pdf agregado

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
     <li>Si aun no lo sabes, proba seguir buscando en la pagina previa</li>
     <li>Igual te dejo mi mail por las dudas</li>
 
-    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:frosimanuel@gmail.com">username@domain.com</a></li>
+    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:frosimanuel@gmail.com">frosimanuel@gmail.com</a></li>
     <li><span class="li-icon">{% include svg/internet.svg %}</span><a href="https://frosimanuel.github.io/">Y si no le alcanza, vuelva a casa estimado viajero.</a></li>
   </ul>
 </div>
